--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
 
   <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="styles/font-awesome.css">
-  <!-- <link rel="stylesheet" href="styles/app.css"> -->
+  <link rel="stylesheet" href="styles/app.css">
   <script src="scripts/firebase.js"></script>
 
   <script src="bower_components/jQuery/dist/jquery.js"></script>
