cleaning up sharing

--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,8 @@
   <meta name="description" content="Daplie">
   <meta name="viewport" content="width=device-width">
 
-  <meta property="og:title" content="Daplie"/>
-  <meta property="og:url" content="https://hero.daplie.com"/>
+  <meta property="og:title" content="podiumcoin.com"/>
+  <meta property="og:url" content="https://podiumcoin.com"/>
   <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/blockchain-215cc.appspot.com/o/Gitlab-group-logo-b.png?alt=media&token=e7c5900c-8a7f-4d39-a166-62070d696c72"/>
   <meta property="fb:app_id" content="1479806108781231"/>
   <meta property="og:description" content="Daplie..."/>
