tags pretty much done

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
   <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="styles/font-awesome.css">
   <link rel="stylesheet" href="styles/app.css">
+  <link rel="stylesheet" href="bower_components/ng-tags-input/ng-tags-input.min.css">
   <script src="scripts/firebase.js"></script>
 
   <script src="bower_components/jQuery/dist/jquery.js"></script>
@@ -77,6 +78,8 @@
   <script src="bower_components/angular-stripe-checkout/angular-stripe-checkout.js"></script>
   <script src="bower_components/angular-socialshare/dist/angular-socialshare.min.js"></script>
   <script src="bower_components/angular-touch/angular-touch.js"></script>
+  <script src="bower_components/ng-tags-input/ng-tags-input.min.js"></script>
+
 
   <script src="scripts/app.js"></script>
   <script src="scripts/variables.js"></script>
